#369: Added Text AI Analytics notebook (#371)
* Moved Text AI notebooks to non-work-in-progress notebooks
* Connected Text AI notebooks
* Updated notebook_requirements.txt

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
@@ -5,9 +5,9 @@
    "id": "d89333d8-58be-4d52-a483-510b6fd30920",
    "metadata": {},
    "source": [
-    "# Text AI Extension initialization\n",
+    "# Text AI Extension Initialization\n",
     "\n",
-    "Here we will bring the Text AI Extension functionality up and running. We will do this via a single call to function in the support library.\n",
+    "Here we will bring the Text AI functionality up and running. We will do this via a single call to function in the support library.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -18,7 +18,7 @@
     "    * **Caution**: Restarting the Docker-DB will wipe out the content of the database.\n",
     "\n",
     "Prior to using this notebook one needs to complete the following steps:\n",
-    "1. [Configure the AI-Lab](../../main_config.ipynb).\n",
+    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -32,27 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../../utils/access_store_ui.ipynb\n",
-    "display(get_access_store_ui('../../'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d16b32a-1a2c-4236-a6c5-21cd4e6b7f1a",
-   "metadata": {},
-   "source": [
-    "## Configure access to a pre-release version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61af171a-df95-4f9f-a911-4f9f2a003a48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run utils/txaie_init_ui.ipynb\n",
-    "display(get_txaie_pre_release_ui(ai_lab_config))"
+    "%run ../utils/access_store_ui.ipynb\n",
+    "display(get_access_store_ui('../'))"
    ]
   },
   {
@@ -76,16 +57,21 @@
     "editable": true,
     "slideshow": {
      "slide_type": ""
-    },
-    "tags": [
-     "uploading_model"
-    ]
+    }
    },
    "outputs": [],
    "source": [
     "from exasol.nb_connector.text_ai_extension_wrapper import initialize_text_ai_extension\n",
     "\n",
     "initialize_text_ai_extension(ai_lab_config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d8aedb",
+   "metadata": {},
+   "source": [
+    "You can now continue with the [Text AI Preprocessing Notebook](txaie_preprocessing.ipynb)."
    ]
   }
  ],
