--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -16,8 +16,8 @@
     "\n",
     "Prior to using this notebook one needs to complete the following steps:\n",
     "\n",
-    "1. [Load the Customer Support Ticket Dataset](../../data/data_customer_support.ipynb)\n",
-    "2. [Initialize the Text AI Extension](./txaie_init.ipynb)\n"
+    "1. [Load the Customer Support Ticket Dataset](../data/data_customer_support.ipynb)\n",
+    "2. [Initialize the Text AI Extension](txaie_init.ipynb)\n"
    ]
   },
   {
@@ -46,7 +46,7 @@
     "Topic Classification is the task of assigning topics to text/documents/datapoints. In Topic Classification, a given set of topics is used, and each data point is assigned a relevance score and rank for each of the topics. These relevance scores and ranks can then be used to select the best matching topic for each data point.\n",
     "Given that a document is about a particular topic, particular words are expected to appear in the document more or less frequently. However, it is not required for the exact words to describe the topic to be found in a text. This means that topics can be inferred, even if their name/description/topic synonyms are not found in the data.\n",
     "\n",
-    "![diagramm a document text added topics](./images/topics.drawio.png)                                                                                                             \n",
+    "![diagramm a document text added topics](images/topics.drawio.png)\n",
     "Topic Classification works with a given set of these topics as input and assigns to each a relevance score that the text being about this topic. It is usually trained using supervised learning. It can also be used with Zero-Shot Classification models, which can assign classes/topics which have not been seen during the training. This is opposed to other approaches like topic extraction, which is often unsupervised and does not need a list of topics as input, instead extracting them from the data itself.\n",
     "                                                                                                                     \n",
     "### Keyword Search\n",
@@ -55,7 +55,7 @@
     "These can then help in further steps, e.g. summarizing the content of texts and recognizing the main topics discussed.\n",
     "Keywords or phrases need be present in the text.\n",
     "For Example:\n",
-    "![diagramm a document text with highlighted keywords](./images/keywords.drawio.png)\n",
+    "![diagramm a document text with highlighted keywords](images/keywords.drawio.png)\n",
     "\n",
     "\n",
     "### Named Entity Recognition\n",
@@ -66,7 +66,7 @@
     "\n",
     "Let's look at an example of what the output for these three steps might look like combined. For a given document, consider the document content to be \"I'm having an issue with the GoPro Hero. It's affecting my productivity.\". We may use a topic classifier with the input topic set of \"urgent, not urgent\" for inferring urgency from ticket content. The NER and Keyword Search do not need additional input, they just work with the document itself. Then the output of a preprocessing pipeline containing all three steps could look something like this:\n",
     "\n",
-    "![diagramm showing document text with found entity and keyword and topic](./images/document_annotated.drawio.png)\n",
+    "![diagramm showing document text with found entity and keyword and topic](images/document_annotated.drawio.png)\n",
     "\n"
    ]
   },
@@ -95,8 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../../utils/access_store_ui.ipynb\n",
-    "display(get_access_store_ui('../../'))"
+    "%run ../utils/access_store_ui.ipynb\n",
+    "display(get_access_store_ui('../'))"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../../utils/jupysql_init.ipynb"
+    "%run ../utils/jupysql_init.ipynb"
    ]
   },
   {
@@ -786,7 +786,7 @@
     "\n",
     "The `DOCUMENTS_AI_LAB_TICKETS_SAMPLE_VIEW` is a view on top of our input data, with the addition of the span identifier(`TEXT_DOC_ID`, `TEXT_CHAR_BEGIN`, `TEXT_CHAR_END`) for the text column of each row. This can be used to join the original data with the preprocessing results.\n",
     "\n",
-    "![A diagramm showing multiple Table names with their respective columns. Starting at \"CUSTOMER_SUPPORT_TICKETS\" folowed by \"TICKETS_SAMPLE\", then flowing to \"DOCUMENTS\" and \"DOCUMENTS_AI_LAB_TICKETS_SAMPLE_VIEW\". The columns containing the text document span are highlighted.](./images/data_model_1.drawio.png)\n",
+    "![A diagramm showing multiple Table names with their respective columns. Starting at \"CUSTOMER_SUPPORT_TICKETS\" folowed by \"TICKETS_SAMPLE\", then flowing to \"DOCUMENTS\" and \"DOCUMENTS_AI_LAB_TICKETS_SAMPLE_VIEW\". The columns containing the text document span are highlighted.](images/data_model_1.drawio.png)\n",
     "\n",
     "Let's take a closer look at the results of the topic classification step in our preprocessing now. These can be found in the view `TOPIC_CLASSIFIER_VIEW`.\n",
     "\n",
@@ -869,7 +869,7 @@
    "source": [
     "Similar to the `TOPIC_CLASSIFIER_VIEW`, the `NAMED_ENTITY_VIEW` also has the Span(`TEXT_DOC_ID`, `TEXT_CHAR_BEGIN`, `TEXT_CHAR_END`) identifying the input document the entity was found in. Then there are the found named entities in the `ENTITY` column, as well as an `ENTITY_TYPE` and an `ENTITY_SCORE`. The `ENTITY_TYPE` and `ENTITY_SCORE` are assigned to the entity by the model. Additionally, we also have an identifying span for the entity itself: `ENTITY_DOC_ID`, `ENTITY_CHAR_BEGIN`, `ENTITY_CHAR_END`. This span represents exactly where in our input data this entity was found.\n",
     "\n",
-    "![a text with an id number. the text containings the named entity subtext \"GoPro Hero\". from the id, subtext begin and subtext end arrows are pointing to the id,begin,end of the entity span.](./images/entity_span.drawio.png)\n",
+    "![a text with an id number. the text containings the named entity subtext \"GoPro Hero\". from the id, subtext begin and subtext end arrows are pointing to the id,begin,end of the entity span.](images/entity_span.drawio.png)\n",
     "\n",
     "Since the named entity was found in the text identified by `TEXT_DOC_ID, TEXT_CHAR_BEGIN, TEXT_CHAR_END`, it follows that `TEXT_DOC_ID`=`ENTITY_DOC_ID` for a given row. Similarly, both `ENTITY_CHAR_BEGIN` and `ENTITY_CHAR_END` are between `TEXT_CHAR_BEGIN` and `TEXT_CHAR_END`. You can use these spans for further processing down the line. For example, you could check how close together named entities of the same document were found, and then check if certain named entity clusters are indicative of different topics. However, this post-processing is not part of this tutorial.\n",
     "\n",
@@ -978,7 +978,7 @@
     "\n",
     "Here is an overview of the data model our preprocessing created.\n",
     "    \n",
-    "![A diagramm showing multiple Table names with their respective columns. Starting at \"DOCUMENTS\" and then the three result views. The columns containg the text document span are highlighted.](./images/data_model_2.drawio.png)\n",
+    "![A diagramm showing multiple Table names with their respective columns. Starting at \"DOCUMENTS\" and then the three result views. The columns containg the text document span are highlighted.](images/data_model_2.drawio.png)\n",
     "\n",
     "\n",
     "## Adding Data to Source View\n",
@@ -1133,6 +1133,14 @@
     "    \"\"\")\n",
     "    with option_context('display.max_rows', 20, 'display.max_colwidth', 1000):\n",
     "        display(audit_log)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51c57149",
+   "metadata": {},
+   "source": [
+    "You can now continue with the [Text AI Analytics Notebook](txaie_analytics.ipynb)."
    ]
   }
  ],
