#377: Adjusted SLC notebooks to new interface

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -28,39 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cdb53e1-3d9e-40af-a340-4ef224727fa0",
-   "metadata": {},
-   "source": [
-    "## Specific Configuration for this Tutorial\n",
-    "\n",
-    "For this tutorial we need the build definition of a Script-Languages container.\n",
-    "\n",
-    "You have two options:\n",
-    " - default: Clone the Exasol <a href=\"https://github.com/exasol/script-languages-release\" target=\"_blank\" rel=\"noopener\">Script-Languages-Release</a> Github repository.\n",
-    " - for advanced users: Use a custom path to an existing clone of the Exasol <a href=\"https://github.com/exasol/script-languages-release\" target=\"_blank\" rel=\"noopener\">Script-Languages-Release</a> Github repository.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9f02bc2f-411f-4479-b2e2-1afef96e4bd8",
-   "metadata": {},
-   "source": [
-    "### Load UI functions\n",
-    "Let's import some additional UI functions in order to use them in this notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "224345da-f14e-4a45-bf8a-07e3ba0870dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run ./utils/slc_ui.ipynb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b81b0103-1014-4bc9-8724-0c0bafa83a23",
    "metadata": {},
    "source": [
@@ -69,135 +36,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "95d1e0e1-e334-4154-91cd-765d78868eaa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.nb_connector.ai_lab_config import StorageBackend\n",
+    "from exasol.nb_connector.ai_lab_config import StorageBackend, AILabConfig\n",
     "if ai_lab_config.get(AILabConfig.storage_backend, ) == StorageBackend.saas.name:\n",
     "    popup_message(f\"This tutorial will not work correctly with a SaaS as backend. You can export the Script-Languages-Container to a local file, but the upload to the database will fail.\")\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Specific Configuration for this Tutorial\n",
+    "\n",
+    "For this tutorial we need the build definition of a Script-Languages container.\n",
+    "\n",
+    "The tutorial will clone the Script-Languages-Release repository and use a specifc version.\n",
+    "First we import a convenience class from the notebook connector, called `ScriptLanguagesContainer`."
+   ],
+   "id": "1adb7d2770b9906e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "source": "from exasol.nb_connector.slc import ScriptLanguageContainer",
+   "id": "43aa33006ffa975a",
+   "outputs": []
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "This class provides a constant pointing to the Github release used in the current version.",
+   "id": "eb25fa82fea00c28"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "ScriptLanguageContainer.GITHUB_URL",
+   "id": "779378af80ac043f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The class `ScriptLanguageContainer` also provides a function to fetch and show all available template flavors:",
+   "id": "9b7c3ae4940a3bda"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "ScriptLanguageContainer.list_available_flavors()",
+   "id": "9084014cfef72742"
   },
   {
    "cell_type": "markdown",
    "id": "395d6f4f-6e06-45e3-a9a7-54dc94e73332",
    "metadata": {},
    "source": [
-    "### Instantiate SLCT Manager\n",
+    "### Define the flavor for our Script Languages Container\n",
     "\n",
-    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
-    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
+    "Now let's the define the flavor we want to use in this tutorial. In this tutorial we will use the [template-Exasol-all-python-3.10](https://github.com/exasol/script-languages/blob/master/flavors/template-Exasol-all-python-3.10/FLAVOR_DESCRIPTION.md) flavor.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8281a4f32b1bade9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flavor = \"template-Exasol-all-python-3.10\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24d0d337bbf26c47",
+   "metadata": {},
+   "source": [
+    "### Create an instance of Script Languages Container class\n",
+    "\n",
+    "The \"ScriptLanguageContainer\" class simplifies using the API of `exaslct`.\n",
+    "The following cell will therefore create an instance class `ScriptLanguageContainer` from the notebook-connector.\n",
+    "Creating this instance will:\n",
+    "* Check that no other entries exist in Secret Store\n",
+    "* Add all necessary entries to the Secret Store\n",
+    "* Clone the [script-languages-release](https://github.com/exasol/script-languages-release) repository"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9f42c7c6-0297-4cb4-bedf-d3a2a58e69fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from exasol.nb_connector.slct_manager import SlctManager\n",
-    "slct_manager = SlctManager(ai_lab_config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "178b59e9-8f46-43b1-b4f8-9cd6d6bf5076",
-   "metadata": {},
-   "source": [
-    "### Configure the Script-Languages directory\n",
-    "#### Choose the source"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f8caa77-35a0-403d-af96-e5f8056ba489",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(get_slc_source_selection_ui(ai_lab_config))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc0fe1a5-8861-4f18-8bcf-92600f86f33f",
-   "metadata": {},
-   "source": [
-    "### Use existing script-languages-repository\n",
-    "If you chose to use an existing script-languages-repository, then simply select the path."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56e16540-5f4b-4d5c-8c83-d34c1217eb00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(get_existing_slc_ui(ai_lab_config))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1db0f115-9382-4e53-be08-53586b831d0b",
-   "metadata": {},
-   "source": [
-    "### Clone the Script-Languages-Release repository\n",
-    "If you chose to clone the Exasol script-languages-repository, then first select the root path where the repository should be stored."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d84889f-7c3a-4f69-9bf1-c193481867af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(get_slc_target_dir_ui(ai_lab_config))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a02ee33f-1958-4f9c-a796-01c6bc2a8787",
-   "metadata": {},
-   "source": [
-    "#### Clone the repository"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31132726-9827-4c9b-8fb8-0884d2f36e67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if clone_slc_repo(ai_lab_config):\n",
-    "    slct_manager.clone_slc_repo()\n",
-    "print(\"Ready\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "53997bff-b4be-406f-b54f-ae9f39939ede",
-   "metadata": {},
-   "source": [
-    "#### Verify that the required flavor for the tutorial is present"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb6b26b9-cb24-4b66-85c9-e15a0c92ff2c",
    "metadata": {
-    "scrolled": true
+    "ExecuteTime": {
+     "end_time": "2025-08-13T17:41:30.750592Z",
+     "start_time": "2025-08-13T17:41:30.554520Z"
+    }
    },
    "outputs": [],
-   "source": [
-    "if not slct_manager.check_slc_repo_complete():\n",
-    "    popup_message(f\"The script-languages repository does not fullfill requirements.\")\n"
-   ]
+   "source": "slc = ScriptLanguageContainer.create(secrets=ai_lab_config, name=\"sample_slc\", flavor=flavor)"
   },
   {
    "cell_type": "markdown",
