--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
@@ -36,10 +36,10 @@
    "id": "8ef77c92-a796-4b02-9747-f711dca9a9b6",
    "metadata": {},
    "source": [
-    "### Instantiate SLCT Manager\n",
+    "### Instantiate Script Languages Container\n",
     "\n",
-    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
-    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
+    "The \"ScriptLanguageContainer\" class simplifies the usage of the API of `exaslct`.\n",
+    "The following cell will therefore create an instance class `ScriptLanguageContainer` from the notebook-connector."
    ]
   },
   {
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.nb_connector import slct_manager\n",
-    "slctmanager = slct_manager.SlctManager(ai_lab_config)"
+    "from exasol.nb_connector.slc import ScriptLanguageContainer\n",
+    "slc = ScriptLanguageContainer(secrets=ai_lab_config, name=\"sample_slc\")"
    ]
   },
   {
@@ -67,33 +67,7 @@
    "id": "79e9843d-d436-4f97-b20e-56d2a42afdaa",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%run ./utils/file_system_ui.ipynb\n",
-    "%run ./utils/slc_ui.ipynb"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "b632c4b5-3bb9-46c1-8c68-009102432a71",
-   "metadata": {},
-   "source": [
-    "## Customize\n",
-    "\n",
-    "First you need to define an alias for the new SLC. The alias will be used to reference the container later from the UDFs.\n",
-    "\n",
-    "Note: In this tutorial the alias also will be used as part of the export file (tar.gz) and the uploaded container to the BucketFS. This allows you to create, upload and use different script-language-containers: one per alias."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a88f47d9-7337-45fb-b2d4-08b74bc95f5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(get_alias_ui(ai_lab_config, \"ai_lab_default_custom\"))"
-   ]
+   "source": "%run ./utils/file_system_ui.ipynb"
   },
   {
    "cell_type": "markdown",
@@ -113,9 +87,7 @@
    "id": "ed0ad229-06b6-4083-8daa-a23e176b59d4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "show_directory_content(slctmanager.slc_dir.flavor_dir / \"flavor_customization\")"
-   ]
+   "source": "show_directory_content(slc.flavor_path / \"flavor_customization\")"
   },
   {
    "cell_type": "markdown",
@@ -140,9 +112,7 @@
    "id": "e9720186-a4b2-43f3-81d5-3f96adc48e60",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "show_files([slctmanager.slc_dir.custom_pip_file])"
-   ]
+   "source": "show_files([slc.custom_pip_file])"
   },
   {
    "cell_type": "markdown",
@@ -162,10 +132,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgboost_pkg = slct_manager.PipPackageDefinition(pkg=\"xgboost\", version=\"2.0.3\")\n",
-    "scikit_learn_pkg = slct_manager.PipPackageDefinition(pkg=\"scikit-learn\", version=\"1.5.0\")\n",
-    "slctmanager.append_custom_packages([xgboost_pkg, scikit_learn_pkg])\n",
-    "show_files([slctmanager.slc_dir.custom_pip_file])"
+    "from exasol.nb_connector.slc import PipPackageDefinition\n",
+    "xgboost_pkg = PipPackageDefinition(pkg=\"xgboost\", version=\"2.0.3\")\n",
+    "scikit_learn_pkg = PipPackageDefinition(pkg=\"scikit-learn\", version=\"1.5.0\")\n",
+    "slc.append_custom_pip_packages([xgboost_pkg, scikit_learn_pkg])\n",
+    "show_files([slc.custom_pip_file])"
    ]
   },
   {
@@ -184,9 +155,7 @@
    "id": "06e8ee1f-7121-4e78-8a7f-35951bf685df",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "slctmanager.export()"
-   ]
+   "source": "slc.export()"
   },
   {
    "cell_type": "markdown",
@@ -202,16 +171,14 @@
    "id": "aabe7634-6d47-40c8-a363-4f53bf8702f3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "show_directory_content(slctmanager.working_path.export_path)"
-   ]
+   "source": "show_directory_content(slc.workspace.export_path)"
   },
   {
    "cell_type": "markdown",
    "id": "fc792fc1-5591-4449-879e-8c2866e2a21c",
    "metadata": {},
    "source": [
-    "#### Upload the Container to the Database\n",
+    "#### Deploy the Container to the Database\n",
     "To use the new container you need to upload it to the BucketFS. If the build machine has access to the BucketFS you do it with the `exaslct` upload command, as shown below. Otherwise you need to install the script-languages-container manually: \n",
     "1. Transfer the container tar gz file of the previous step to a machine that has access to the BucketFS. \n",
     "2. From that machine upload it via curl, as described in our [documentation](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/adding_new_packages_script_languages.htm).\n",
@@ -220,7 +187,7 @@
     "You could run the same on the command line with the `exaslct` tool:\n",
     "```\n",
     "cd <slc_dir>\n",
-    "./exaslct upload --flavor-path flavors/<flavor_path> --database-host <database_host> --bucketfs-port <bucketfs_port> --bucketfs-username <bucketfs_username> --bucketfs-password <bucketfs_password> --bucketfs-name <bucketfs_name> --bucket-name <bucket_name>\n",
+    "./exaslct deploy --flavor-path flavors/<flavor_path> --bucketfs-host <bucketfs_host> --bucketfs-port <bucketfs_port> --bucketfs-user <bucketfs_username> --bucketfs-password <bucketfs_password> --bucketfs-name <bucketfs_name> --bucket <bucket_name>\n",
     "```\n",
     "\n"
    ]
@@ -231,9 +198,7 @@
    "id": "4e4f1c13-2d80-4a90-9dad-6883ec92dcfe",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "slctmanager.upload()"
-   ]
+   "source": "slc.deploy()"
   },
   {
    "cell_type": "markdown",
@@ -249,9 +214,7 @@
    "id": "dc2863fc-791c-4035-807b-62abcc705753",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "slctmanager.activation_key"
-   ]
+   "source": "slc.activation_key"
   },
   {
    "cell_type": "markdown",
