--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
@@ -40,10 +40,10 @@
    "id": "be1d76f3-51c5-4b92-812f-bac74ac0e6c3",
    "metadata": {},
    "source": [
-    "### Instantiate SLCT Manager\n",
+    "### Instantiate Script Languages Container\n",
     "\n",
-    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
-    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
+    "The \"ScriptLanguageContainer\" class simplifies the usage of the API of `exaslct`.\n",
+    "The following cell will therefore create an instance class `ScriptLanguageContainer` from the notebook-connector."
    ]
   },
   {
@@ -53,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.nb_connector import slct_manager\n",
-    "slctmanager = slct_manager.SlctManager(ai_lab_config)"
+    "from exasol.nb_connector.slc import ScriptLanguageContainer\n",
+    "slc = ScriptLanguageContainer(secrets=ai_lab_config, name=\"sample_slc\")"
    ]
   },
   {
@@ -97,9 +97,7 @@
    "id": "ab400c06-1fb9-40dd-a8bc-cda4c56905d1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "slct_manager.REQUIRED_FLAVOR"
-   ]
+   "source": "slc.flavor"
   },
   {
    "cell_type": "markdown",
@@ -123,9 +121,7 @@
    "id": "46b1b556-2ea2-476d-b67f-aef76db970ea",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "slctmanager.export()"
-   ]
+   "source": "slc.export()"
   },
   {
    "cell_type": "markdown",
@@ -142,9 +138,7 @@
    "id": "b941a044-25ed-4a51-9a86-52d4b011defa",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "show_directory_content(slctmanager.working_path.export_path)"
-   ]
+   "source": "show_directory_content(slc.workspace.export_path)"
   },
   {
    "cell_type": "markdown",
