--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
@@ -38,10 +38,10 @@
    "id": "9a4f44ef-5c9f-4345-b674-f400adeec03e",
    "metadata": {},
    "source": [
-    "### Instantiate SLCT Manager\n",
+    "### Instantiate Script Languages Container\n",
     "\n",
-    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
-    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
+    "The \"ScriptLanguageContainer\" class simplifies the usage of the API of `exaslct`.\n",
+    "The following cell will therefore create an instance class `ScriptLanguageContainer` from the notebook-connector."
    ]
   },
   {
@@ -51,8 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.nb_connector import slct_manager\n",
-    "slctmanager = slct_manager.SlctManager(ai_lab_config)"
+    "from exasol.nb_connector.slc import ScriptLanguageContainer\n",
+    "slc = ScriptLanguageContainer(secrets=ai_lab_config, name=\"sample_slc\")"
    ]
   },
   {
@@ -99,7 +99,7 @@
     "import textwrap\n",
     "\n",
     "conn.execute(textwrap.dedent(f\"\"\"\n",
-    "CREATE OR REPLACE {slctmanager.language_alias} SCALAR SCRIPT execute_shell_command_py3(command VARCHAR(2000000), split_output boolean)\n",
+    "CREATE OR REPLACE {slc.language_alias} SCALAR SCRIPT execute_shell_command_py3(command VARCHAR(2000000), split_output boolean)\n",
     "EMITS (lines VARCHAR(2000000)) AS\n",
     "import subprocess\n",
     "\n",
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "conn.execute(textwrap.dedent(f\"\"\"\n",
-    "CREATE OR REPLACE {slctmanager.language_alias} SET SCRIPT test_xgboost(i integer)\n",
+    "CREATE OR REPLACE {slc.language_alias} SET SCRIPT test_xgboost(i integer)\n",
     "EMITS (o VARCHAR(2000000)) AS\n",
     "\n",
     "def run(ctx):\n",
@@ -264,7 +264,7 @@
    "outputs": [],
    "source": [
     "conn.execute(textwrap.dedent(f\"\"\"\n",
-    "CREATE OR REPLACE {slctmanager.language_alias} SET SCRIPT test_xgboost(i integer)\n",
+    "CREATE OR REPLACE {slc.language_alias} SET SCRIPT test_xgboost(i integer)\n",
     "EMITS (o1 DOUbLE, o2 DOUbLE, o3 DOUbLE) AS\n",
     "\n",
     "def run(ctx):\n",
