--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -43,7 +43,7 @@
     "from exasol.nb_connector.ai_lab_config import AILabConfig as CKey, StorageBackend\n",
     "from exasol.nb_connector.itde_manager import (bring_itde_up, get_itde_status, restart_itde, take_itde_down, ItdeContainerStatus)\n",
     "from exasol.nb_connector.connections import get_backend\n",
-    "from exasol_integration_test_docker_environment.lib.api.api_errors import TaskFailures, TaskRuntimeError\n",
+    "from exasol_integration_test_docker_environment.lib.models.api_errors import TaskFailures, TaskRuntimeError\n",
     "\n",
     "\n",
     "class ITDEStatus(Enum):\n",
