--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -34,13 +34,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from enum import Enum\n",
     "from typing import List\n",
     "import os\n",
     "\n",
     "import ipywidgets as widgets\n",
     "\n",
     "from exasol.nb_connector.secret_store import Secrets\n",
-    "from exasol.nb_connector.ai_lab_config import AILabConfig as CKey, StorageBackend\n",
+    "from exasol.nb_connector.ai_lab_config import Accelerator, AILabConfig as CKey, StorageBackend\n",
     "from exasol.nb_connector.itde_manager import (bring_itde_up, get_itde_status, restart_itde, take_itde_down, ItdeContainerStatus)\n",
     "from exasol.nb_connector.connections import get_backend\n",
     "from exasol_integration_test_docker_environment.lib.models.api_errors import TaskFailures, TaskRuntimeError\n",
@@ -174,6 +175,14 @@
     "        [\n",
     "            ('Memory Size (GiB)', widgets.IntText(value=int(conf.get(CKey.mem_size, '2'))), CKey.mem_size),\n",
     "            ('Disk Size (GiB)', widgets.IntText(value=int(conf.get(CKey.disk_size, '2'))), CKey.disk_size),\n",
+    "            (\n",
+    "                'Accelerator',\n",
+    "                widgets.Dropdown(\n",
+    "                  value=conf.get(CKey.accelerator, 'none'),\n",
+    "                  options=[x.value for x in Accelerator],\n",
+    "                ),\n",
+    "                CKey.accelerator\n",
+    "            ),\n",
     "            ('Default Schema', widgets.Text(value=conf.get(CKey.db_schema, 'AI_LAB')), CKey.db_schema)\n",
     "        ]\n",
     "    ]\n",
