Small fixes in notebooks

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -47,7 +47,7 @@
     "### Instantiate Script Languages Container\n",
     "\n",
     "The \"ScriptLanguageContainer\" class simplifies the usage of the API of `exaslct`.\n",
-    "The following cell will therefore create an instance class `ScriptLanguageContainer` from the notebook-connector."
+    "The following cell will therefore create an instance of class `ScriptLanguageContainer` from the notebook-connector."
    ]
   },
   {
@@ -248,7 +248,7 @@
    "source": [
     "## Cleanup\n",
     "\n",
-    "This sections shows how you can use the `SLCT Manager` to clean up the artificats created by `exaslct`:\n",
+    "This sections shows how you can use the instance of `ScriptLanguageContainer` class to clean up the artificats created by `exaslct`:\n",
     "- The docker images for the script-languages-container as well as the cache images\n",
     "- The exported containers (tar gz files)\n",
     "- The cached container files\n"
@@ -261,16 +261,17 @@
    "source": [
     "### Clean up the docker images\n",
     "\n",
-    "The following command cleans up the docker images:"
+    "The following command cleans up the docker images.\n",
+    "**Be aware that this command deletes all script-languages-container related docker images on the running host, even those created by other notebooks or users.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0f1e8489-f8d5-4192-a77d-207e8daca238",
    "metadata": {},
+   "source": "slc.clean_docker_images()",
    "outputs": [],
-   "source": "slc.clean_docker_images()"
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
