--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -123,7 +123,7 @@
     "### Create an instance of Script Languages Container class\n",
     "\n",
     "The \"ScriptLanguageContainer\" class simplifies using the API of `exaslct`.\n",
-    "The following cell will therefore create an instance class `ScriptLanguageContainer` from the notebook-connector.\n",
+    "The following cell will therefore create an instance of class `ScriptLanguageContainer` from the notebook-connector.\n",
     "Creating this instance will:\n",
     "* Check that no other entries exist in Secret Store\n",
     "* Add all necessary entries to the Secret Store\n",
