--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
@@ -43,7 +43,7 @@
     "### Instantiate Script Languages Container\n",
     "\n",
     "The \"ScriptLanguageContainer\" class simplifies the usage of the API of `exaslct`.\n",
-    "The following cell will therefore create an instance class `ScriptLanguageContainer` from the notebook-connector."
+    "The following cell will therefore create an instance of class `ScriptLanguageContainer` from the notebook-connector."
    ]
   },
   {
