Apply suggestions from code review
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
@@ -40,8 +40,8 @@
    "source": [
     "### Instantiate Script Languages Container\n",
     "\n",
-    "The \"ScriptLanguageContainer\" class simplifies the usage of the API of `exaslct`.\n",
-    "The following cell will therefore create an instance of class `ScriptLanguageContainer` from the notebook-connector."
+    "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
+    "which enables using the`exaslct` in the AI Lab in a convenient way."
    ]
   },
   {
