--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -46,8 +46,8 @@
    "source": [
     "### Instantiate Script Languages Container\n",
     "\n",
-    "The \"ScriptLanguageContainer\" class simplifies the usage of the API of `exaslct`.\n",
-    "The following cell will therefore create an instance of class `ScriptLanguageContainer` from the notebook-connector."
+    "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
+    "which enables using the`exaslct` in the AI Lab in a convenient way."
    ]
   },
   {
@@ -248,7 +248,7 @@
    "source": [
     "## Cleanup\n",
     "\n",
-    "This sections shows how you can use the instance of `ScriptLanguageContainer` class to clean up the artificats created by `exaslct`:\n",
+    "This sections shows how you can use the instance of `ScriptLanguageContainer` class to clean up the artifacts created by `exaslct`:\n",
     "- The docker images for the script-languages-container as well as the cache images\n",
     "- The exported containers (tar gz files)\n",
     "- The cached container files\n"
