--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -120,10 +120,10 @@
    "id": "24d0d337bbf26c47",
    "metadata": {},
    "source": [
-    "### Create an instance of Script Languages Container class\n",
+    "### Create an instance of class ScriptLanguagesContainer\n",
     "\n",
-    "The \"ScriptLanguageContainer\" class simplifies using the API of `exaslct`.\n",
-    "The following cell will therefore create an instance of class `ScriptLanguageContainer` from the notebook-connector.\n",
+    "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
+    "which enables using the`exaslct` in the AI Lab in a convenient way."
     "Creating this instance will:\n",
     "* Check that no other entries exist in Secret Store\n",
     "* Add all necessary entries to the Secret Store\n",
