--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -123,7 +123,7 @@
     "### Create an instance of class ScriptLanguagesContainer\n",
     "\n",
     "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
-    "which enables using the`exaslct` in the AI Lab in a convenient way."
+    "which enables using the`exaslct` in the AI Lab in a convenient way.\n",
     "Creating this instance will:\n",
     "* Check that no other entries exist in Secret Store\n",
     "* Add all necessary entries to the Secret Store\n",
