Small text changes in the notebooks

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -141,7 +141,10 @@
     }
    },
    "outputs": [],
-   "source": "slc = ScriptLanguageContainer.create(secrets=ai_lab_config, name=\"sample_slc\", flavor=flavor)"
+   "source": [
+    "slc = ScriptLanguageContainer.create(secrets=ai_lab_config, name=\"sample_slc\", flavor=flavor)\n",
+    "print(f\"{slc.name} is ready.\")"
+   ]
   },
   {
    "cell_type": "markdown",
