--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
@@ -40,7 +40,7 @@
    "id": "be1d76f3-51c5-4b92-812f-bac74ac0e6c3",
    "metadata": {},
    "source": [
-    "### Instantiate Script Languages Container\n",
+    "### Instantiate ScriptLanguagesContainer\n",
     "\n",
     "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
     "which enables using the`exaslct` in the AI Lab in a convenient way."
