--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -44,7 +44,7 @@
    "id": "1e70ffc8-b45e-40dc-85e5-ea3c986f7bbe",
    "metadata": {},
    "source": [
-    "### Instantiate Script Languages Container\n",
+    "### Instantiate ScriptLanguagesContainer\n",
     "\n",
     "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
     "which enables using the`exaslct` in the AI Lab in a convenient way."
