--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
@@ -36,7 +36,7 @@
    "id": "8ef77c92-a796-4b02-9747-f711dca9a9b6",
    "metadata": {},
    "source": [
-    "### Instantiate Script Languages Container\n",
+    "### Instantiate ScriptLanguagesContainer\n",
     "\n",
     "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
     "which enables using the`exaslct` in the AI Lab in a convenient way."
